2013-05-19  Sancho Lerena <slerena@artica.es>

	* build_src.sh: UPdated, removed old stuff and updated (my) paths

	* build_rpm.redhat.sh: New script for Centos/fedora/rhel RPM packaging.

2012-06-20  Ramon Novoa  <rnovoa@artica.es>

	* pandora_update_version.sh: Merged from trunk. Update version in agent
	  configuration files.

2012-06-11  Ramon Novoa  <rnovoa@artica.es>

	* pandora_update_version.sh: Merged from trunk. Update version string in
	  server configuration file.

2012-05-05  Sancho Lerena <slerena@artica.es>

	* anytermd: Added anyterm to extras. Included modifications on original
	anytermd project source code. Added a new spec file for centos/fedora/rhel.
	Tested on FC16/i386 and centos6/x86_84.

2012-05-03  Ramon Novoa  <rnovoa@artica.es>

	* pandora_update_version.sh: Fixed a typo.

2012-02-21  Ramon Novoa  <rnovoa@artica.es>

	* pandora_update_version.sh: Merged from trunk. Update agent version in
	  versioninfo.rc.

2011-12-19  Ramon Novoa  <rnovoa@artica.es>

	* build_deb.sh: Fixed a path.

2011-12-19  Ramon Novoa  <rnovoa@artica.es>

	* build_src.sh, build_windows_agent.sh,
	  build_deb.sh, pandora_update_version.sh,
	  build_rpm.sh: Updated to build from the branch.

2011-12-14  Ramon Novoa  <rnovoa@artica.es>

	* pandora_update_version.sh: Update CLI and DB maintenance scripts
	  version strings.

2011-10-27  Ramon Novoa  <rnovoa@artica.es>

	* pandora_update_version.sh: Fixed a typo.

2011-10-27  Ramon Novoa  <rnovoa@artica.es>

	* pandora_update_version.sh: Include build number in the
	  Windows agent installer for nightly builds.

2011-10-27  Ramon Novoa  <rnovoa@artica.es>

	* build_src.sh: Create symlinks needed to build RPM packages.

2011-10-27  Ramon Novoa  <rnovoa@artica.es>

	* build_src.sh: Include build number in tarballs for nightly builds.

2011-10-27  Ramon Novoa  <rnovoa@artica.es>

	* pandora_update_version.sh: Include build number in deb package
	  names for nightly builds.

2011-10-11  Ramon Novoa  <rnovoa@artica.es>
