@@ -1,9 +1,7 @@
 #!/bin/bash
-
-CODEHOME=/usr/src/pandora_4_open/
-CODEHOME_ENT=/usr/src/artica_code/pandora/branches/4.0/
-RPMHOME=/root/rpmbuild
-
+CODEHOME=~/code/pandora/branches/pandora_4.0
+CODEHOME_ENT=~/code/artica/code
+RPMHOME=/usr/src/packages
 VERSION=$(grep 'my $pandora_version =' $CODEHOME/pandora_server/lib/PandoraFMS/Config.pm | awk '{print substr($4, 2, length($4) - 3)}')
 BUILD=$(grep 'my $pandora_build =' $CODEHOME/pandora_server/lib/PandoraFMS/Config.pm | awk '{print substr($4, 2, length($4) - 3)}')
 
