@@ -1,3 +1,7 @@
+2013-05-21  Ramon Novoa  <rnovoa@artica.es>
+
+	* build_src.sh: Reverted a couple of variables.
+
 2013-05-19  Sancho Lerena <slerena@artica.es>
 
 	* build_src.sh: UPdated, removed old stuff and updated (my) paths
